force-app/main/default/objects/Account/fields/Acepto_Condiciones_de_Portal_Autogestion__c.field-meta.xml
<CustomField>
    <fullName>Acepto_Condiciones_de_Portal_Autogestion__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Acepto condiciones de Portal Autogestión</description>
    <inlineHelpText>Acepto condiciones de Portal Autogestión</inlineHelpText>
    <label>Acepto Condiciones de Portal Autogestión</label>
    <type>Checkbox</type>
</CustomField>