force-app/main/default/objects/Account/fields/Actividad_APNFD__c.field-meta.xml
<CustomField>
    <fullName>Actividad_APNFD__c</fullName>
    <label>Actividad_APNFD</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>12</fullName>
                <label>Abogados, Notarios y Contadores Públicos que operen para sus clientes: Compra y Venta de bienes Inmuebles, Sociedades Mercantiles o Estructuras Jurídicas, administración Activos</label>
            </value>
            <value>
                <fullName>5</fullName>
                <label>Arrendamiento, Compra y Venta de Bienes Raíces</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Casinos, Tragamonedas, Bingos y Loterías, Tradicional o Electrónica</label>
            </value>
            <value>
                <fullName>17</fullName>
                <label>Clubes o Asociaciones Deportivas</label>
            </value>
            <value>
                <fullName>8</fullName>
                <label>Compra, Venta, Arrendamiento y Distribución de: Automóviles, Aeronaves y Medios de Transporte Marítimo</label>
            </value>
            <value>
                <fullName>6</fullName>
                <label>Compra y Venta de Antigüedades, Obras de Arte, Inversión Filatélica u Bienes Suntuarios</label>
            </value>
            <value>
                <fullName>19</fullName>
                <label>Conciertos o Espectáculos</label>
            </value>
            <value>
                <fullName>7</fullName>
                <label>Elaboración, Industrialización o Compra y Venta de Joyas o Bienes Elaborados con Metales Preciosos</label>
            </value>
            <value>
                <fullName>20</fullName>
                <label>Hoteles y Casas de Empeño</label>
            </value>
            <value>
                <fullName>18</fullName>
                <label>Juegos Deportivos Internacionales con venta de boletería, salvo los de la FIFA</label>
            </value>
            <value>
                <fullName>13</fullName>
                <label>Operaciones de Ahorro y Préstamo</label>
            </value>
            <value>
                <fullName>14</fullName>
                <label>Operaciones en Cheques o cualquier título o documento de valor</label>
            </value>
            <value>
                <fullName>15</fullName>
                <label>Operaciones realizadas en forma magnética, electrónica, telefónica u otras formas de comunicación; de emisión</label>
            </value>
            <value>
                <fullName>9</fullName>
                <label>Servicio de Préstamos no Bancarios</label>
            </value>
            <value>
                <fullName>11</fullName>
                <label>Servicios de Blindaje de Vehículos e Inmuebles</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>Servicios de Transferencia y/o Envío de Dinero</label>
            </value>
            <value>
                <fullName>1</fullName>
                <label>Servicios Financieros internacionales en Honduras no supervisados por la CNBS</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Servicios Postales, Encomiendas, Giros de divisas o Traslados de Caudales, Valores o Dinero</label>
            </value>
            <value>
                <fullName>21</fullName>
                <label>Transacciones de bolsas de valores</label>
            </value>
            <value>
                <fullName>22</fullName>
                <label>Transferencias de fondo y cualquier otra actividad o transacción realizada en medios actuales o por usarse en el futuro</label>
            </value>
            <value>
                <fullName>10</fullName>
                <label>Transporte o Traslado de Caudales, Valores o Dinero</label>
            </value>
            <value>
                <fullName>16</fullName>
                <label>Venta o Compra de cheques de viajero, giros postales u otro título o documento de valor</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>