force-app/main/default/objects/Account/fields/Asesor__c.field-meta.xml
<CustomField>
    <fullName>Asesor__c</fullName>
    <label>Asesor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HN21892</fullName>
                <label>ALEJANDRA VASQUEZ</label>
            </value>
            <value>
                <fullName>HN22258</fullName>
                <label>ALEYDA URRUTIA</label>
            </value>
            <value>
                <fullName>HN02713</fullName>
                <label>ANA ANDINO</label>
            </value>
            <value>
                <fullName>HN18812</fullName>
                <label>ANA RAUDES</label>
            </value>
            <value>
                <fullName>HN19331</fullName>
                <label>ANDREA PACHECO</label>
            </value>
            <value>
                <fullName>HN18762</fullName>
                <label>ANGELA GOMEZ</label>
            </value>
            <value>
                <fullName>HN24669</fullName>
                <label>ANGELICA GALLARDO</label>
            </value>
            <value>
                <fullName>HN24668</fullName>
                <label>BELKY FERRUFINO</label>
            </value>
            <value>
                <fullName>HN25948</fullName>
                <label>CARMEN GEHL</label>
            </value>
            <value>
                <fullName>HN22758</fullName>
                <label>CAROLINA HANDAL</label>
            </value>
            <value>
                <fullName>HN02852</fullName>
                <label>CLAUDIA MANCIA</label>
            </value>
            <value>
                <fullName>HN21653</fullName>
                <label>DARIO OYUELA</label>
            </value>
            <value>
                <fullName>HN19320</fullName>
                <label>DIANA ORTIZ</label>
            </value>
            <value>
                <fullName>HN22061</fullName>
                <label>GABRIELA CARCAMO</label>
            </value>
            <value>
                <fullName>HN21718</fullName>
                <label>IRIS PINEDA</label>
            </value>
            <value>
                <fullName>HN00387</fullName>
                <label>IRIS PORTILLO</label>
            </value>
            <value>
                <fullName>HN21645</fullName>
                <label>JENNIFER NIETO</label>
            </value>
            <value>
                <fullName>HN23292</fullName>
                <label>JESICA ESPAÑA</label>
            </value>
            <value>
                <fullName>HN23268</fullName>
                <label>JOSE LUIS AGUILERA</label>
            </value>
            <value>
                <fullName>HN22984</fullName>
                <label>JULIO VALLE</label>
            </value>
            <value>
                <fullName>HN22419</fullName>
                <label>KAROL MONTENEGRO</label>
            </value>
            <value>
                <fullName>HN19334</fullName>
                <label>KENIA RIVERA</label>
            </value>
            <value>
                <fullName>HN19337</fullName>
                <label>LAURA ALMENDAREZ</label>
            </value>
            <value>
                <fullName>HN25947</fullName>
                <label>LESLY ANARIBA</label>
            </value>
            <value>
                <fullName>HN25900</fullName>
                <label>LILIAN ACEVEDO</label>
            </value>
            <value>
                <fullName>HN18774</fullName>
                <label>LILIANA SALAZAR</label>
            </value>
            <value>
                <fullName>HN19333</fullName>
                <label>LUIS MATEO</label>
            </value>
            <value>
                <fullName>HN24735</fullName>
                <label>MARYORY VASQUEZ</label>
            </value>
            <value>
                <fullName>HN23483</fullName>
                <label>MONICA ALBERTO</label>
            </value>
            <value>
                <fullName>HN00313</fullName>
                <label>NEFTALI RAMOS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>