force-app/main/default/objects/Account/fields/Asesor_Agn__c.field-meta.xml
<CustomField>
    <fullName>Asesor_Agn__c</fullName>
    <label>Asesor Agn</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HN21892</fullName>
                <label>ALEJANDRA VASQUEZ</label>
            </value>
            <value>
                <fullName>HN22258</fullName>
                <label>ALEYDA URRUTIA</label>
            </value>
            <value>
                <fullName>HN24669</fullName>
                <label>ANGELICA GALLARDO</label>
            </value>
            <value>
                <fullName>HN24668</fullName>
                <label>BELKY FERRUFINO</label>
            </value>
            <value>
                <fullName>HN19320</fullName>
                <label>DIANA ORTIZ</label>
            </value>
            <value>
                <fullName>HN22061</fullName>
                <label>GABRIELA CARCAMO</label>
            </value>
            <value>
                <fullName>HN21645</fullName>
                <label>JENNIFER NIETO</label>
            </value>
            <value>
                <fullName>HN19334</fullName>
                <label>KENIA RIVERA</label>
            </value>
            <value>
                <fullName>HN19337</fullName>
                <label>LAURA ALMENDAREZ</label>
            </value>
            <value>
                <fullName>HN25900</fullName>
                <label>LILIAN ACEVEDO</label>
            </value>
            <value>
                <fullName>HN24735</fullName>
                <label>MARYORY VASQUEZ</label>
            </value>
            <value>
                <fullName>HN22396</fullName>
                <label>OSCAR MADRID</label>
            </value>
            <value>
                <fullName>HN19336</fullName>
                <label>PAULA AVELAR</label>
            </value>
            <value>
                <fullName>HN24493</fullName>
                <label>SARAH BARAHONA</label>
            </value>
            <value>
                <fullName>HN19332</fullName>
                <label>SINDY MEJIA</label>
            </value>
            <value>
                <fullName>HN19962</fullName>
                <label>SORAYA ALEMAN</label>
            </value>
            <value>
                <fullName>HN24687</fullName>
                <label>SUYLMA CALIX</label>
            </value>
            <value>
                <fullName>HN19964</fullName>
                <label>WENDY RUBIO</label>
            </value>
            <value>
                <fullName>HN27739</fullName>
                <label>MELISSA EVORA</label>
            </value>
            <value>
                <fullName>HN02713</fullName>
                <label>ANA ANDINO</label>
            </value>
            <value>
                <fullName>HN24539</fullName>
                <isActive>false</isActive>
                <label>ABDI JIMENEZ</label>
            </value>
            <value>
                <fullName>HN23146</fullName>
                <isActive>false</isActive>
                <label>ELI JOSUA LOPEZ</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>