force-app/main/default/objects/Account/fields/Canal_que_Refiere__c.field-meta.xml
<CustomField>
    <fullName>Canal_que_Refiere__c</fullName>
    <label>Canal que Refiere</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Agencias</fullName>
            </value>
            <value>
                <fullName>Alcance</fullName>
            </value>
            <value>
                <fullName>Banca de Empresas</fullName>
            </value>
            <value>
                <fullName>Banca Emprendedor</fullName>
            </value>
            <value>
                <fullName>Banca Privada</fullName>
            </value>
            <value>
                <fullName>Ficohsa Seguros</fullName>
            </value>
            <value>
                <fullName>Otros</fullName>
            </value>
            <value>
                <fullName>Banca Hipotecaria</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>