force-app/main/default/objects/Account/fields/Canal_Venta__c.field-meta.xml
<CustomField>
    <fullName>Canal_Venta__c</fullName>
    <label>Canal Venta</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>Oficiales Negocio</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>Tele-venta</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>Agencia Banco</label>
            </value>
            <value>
                <fullName>4</fullName>
                <label>TC Futura</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>