force-app/main/default/objects/Account/fields/Cantidad_de_Personas_que_Asistieron__c.field-meta.xml
<CustomField>
    <fullName>Cantidad_de_Personas_que_Asistieron__c</fullName>
    <label>Cantidad_de_Personas_que_Asistieron</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>