force-app/main/default/objects/Account/fields/Cargo_del_Representante__c.field-meta.xml
<CustomField>
    <fullName>Cargo_del_Representante__c</fullName>
    <label>Cargo del Representante</label>
    <length>255</length>
    <type>Text</type>
</CustomField>