force-app/main/default/objects/Account/fields/Carnet__c.field-meta.xml
<CustomField>
    <fullName>Carnet__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Carnet</label>
    <type>Checkbox</type>
</CustomField>