force-app/main/default/objects/Account/fields/Ciudad_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Residencia__c</fullName>
    <label>Ciudad Residencia NO</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>La Ceiba</fullName>
            </value>
            <value>
                <fullName>Choluteca</fullName>
            </value>
            <value>
                <fullName>Trujillo</fullName>
            </value>
            <value>
                <fullName>Comayagua</fullName>
            </value>
            <value>
                <fullName>Santa Rosa de Copán</fullName>
            </value>
            <value>
                <fullName>San Pedro Sula</fullName>
            </value>
            <value>
                <fullName>Yuscarán</fullName>
            </value>
            <value>
                <fullName>Tegucigalpa</fullName>
            </value>
            <value>
                <fullName>Puerto Lempira</fullName>
            </value>
            <value>
                <fullName>La Esperanza</fullName>
            </value>
            <value>
                <fullName>Roatán</fullName>
            </value>
            <value>
                <fullName>La Paz</fullName>
            </value>
            <value>
                <fullName>Gracias</fullName>
            </value>
            <value>
                <fullName>Nueva Octopeque</fullName>
            </value>
            <value>
                <fullName>Juticalpa</fullName>
            </value>
            <value>
                <fullName>Santa Bárbara</fullName>
            </value>
            <value>
                <fullName>Nacaome</fullName>
            </value>
            <value>
                <fullName>Yoro</fullName>
            </value>
            <value>
                <fullName>AGUA BLANCA SUR</fullName>
            </value>
            <value>
                <fullName>AGUA CALIENTE</fullName>
            </value>
            <value>
                <fullName>AZUCARERA CHOLUTECA</fullName>
            </value>
            <value>
                <fullName>AGUA FRIA</fullName>
            </value>
            <value>
                <fullName>AGUA CALIENTE; ZACAPA</fullName>
            </value>
            <value>
                <fullName>AGUANQUETERIQUE</fullName>
            </value>
            <value>
                <fullName>AJUTERIQUE</fullName>
            </value>
            <value>
                <fullName>ALAUCA</fullName>
            </value>
            <value>
                <fullName>ALIANZA</fullName>
            </value>
            <value>
                <fullName>ALUBAREN</fullName>
            </value>
            <value>
                <fullName>AMARATECA</fullName>
            </value>
            <value>
                <fullName>AMAPALA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>