force-app/main/default/objects/Account/fields/Ciudad_Trabajo2__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Trabajo2__c</fullName>
    <label>Ciudad Trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Municipios</valueSetName>
    </valueSet>
</CustomField>