force-app/main/default/objects/Account/fields/Ciudad_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Ciudad_Trabajo__c</fullName>
    <label>Ciudad Trabajo NO</label>
    <length>255</length>
    <type>Text</type>
</CustomField>