force-app/main/default/objects/Account/fields/Codigo_Causa__c.field-meta.xml
<CustomField>
    <fullName>Codigo_Causa__c</fullName>
    <label>Código Causa</label>
    <length>2</length>
    <type>Text</type>
</CustomField>