force-app/main/default/objects/Account/fields/Codigo_de_Barra__c.field-meta.xml
<CustomField>
    <fullName>Codigo_de_Barra__c</fullName>
    <label>Número de Carné</label>
    <length>13</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>