force-app/main/default/objects/Account/fields/Colonia_Avenida_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Avenida_Residencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia/Avenida Residencia</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Cuentas (Colonia/Avenida Residencia)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>