force-app/main/default/objects/Account/fields/Colonia_Avenida_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Colonia_Avenida_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Colonia/Avenida Trabajo</label>
    <referenceTo>Colonia__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>