force-app/main/default/objects/Account/fields/Correo_actual__c.field-meta.xml
<CustomField>
    <fullName>Correo_actual__c</fullName>
    <label>Correo actual</label>
    <type>Email</type>
</CustomField>