force-app/main/default/objects/Account/fields/Correo_Electronico_Oficina__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Oficina__c</fullName>
    <label>Correo Electrónico Oficina</label>
    <type>Email</type>
</CustomField>