force-app/main/default/objects/Account/fields/Correo_Electronico_Representante__c.field-meta.xml
<CustomField>
    <fullName>Correo_Electronico_Representante__c</fullName>
    <label>Correo Electrónico Representante</label>
    <type>Email</type>
</CustomField>