force-app/main/default/objects/Account/fields/Correo_Empresarial__c.field-meta.xml
<CustomField>
    <fullName>Correo_Empresarial__c</fullName>
    <label>Correo Empresarial</label>
    <type>Email</type>
</CustomField>