force-app/main/default/objects/Account/fields/Correo_estado_de_cuenta__c.field-meta.xml
<CustomField>
    <fullName>Correo_estado_de_cuenta__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Correo estado de cuenta</label>
    <referenceTo>Correo_estado_cuenta__c</referenceTo>
    <relationshipLabel>Correo Estado de Cuenta</relationshipLabel>
    <relationshipName>Clientes</relationshipName>
    <type>Lookup</type>
</CustomField>