force-app/main/default/objects/Account/fields/CrearCasoEmail2Case__c.field-meta.xml
<CustomField>
    <fullName>CrearCasoEmail2Case__c</fullName>
    <formula>AND(PersonEmail != null, Celular__c != null, OR(TEXT(UltimoEmail2case__c) == &quot;Z&quot;, ADDMONTHS(UltimoEmail2case__c ,12) &lt; NOW()) )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Crear Caso Email2Case?</label>
    <type>Checkbox</type>
</CustomField>