force-app/main/default/objects/Account/fields/CSAT__c.field-meta.xml
<CustomField>
    <fullName>CSAT__c</fullName>
    <label>CSAT</label>
    <length>40</length>
    <type>Text</type>
</CustomField>