force-app/main/default/objects/Account/fields/De_Participacion__c.field-meta.xml
<CustomField>
    <fullName>De_Participacion__c</fullName>
    <label>% de Participación</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>