force-app/main/default/objects/Account/fields/Debida_Deligencia__c.field-meta.xml
<CustomField>
    <fullName>Debida_Deligencia__c</fullName>
    <label>Debida Deligencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
                <label>SIMPLIFICADA</label>
            </value>
            <value>
                <fullName>2</fullName>
                <label>NORMAL</label>
            </value>
            <value>
                <fullName>3</fullName>
                <label>INCREMENTADA</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>