force-app/main/default/objects/Account/fields/Departamento__c.field-meta.xml
<CustomField>
    <fullName>Departamento__c</fullName>
    <label>Departamento</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>120</fullName>
                <label>ATLANTIDA</label>
            </value>
            <value>
                <fullName>135</fullName>
                <label>CHOLUTECA</label>
            </value>
            <value>
                <fullName>137</fullName>
                <label>COLON</label>
            </value>
            <value>
                <fullName>126</fullName>
                <label>COMAYAGUA</label>
            </value>
            <value>
                <fullName>129</fullName>
                <label>COPAN</label>
            </value>
            <value>
                <fullName>122</fullName>
                <label>CORTES</label>
            </value>
            <value>
                <fullName>136</fullName>
                <label>EL PARAISO</label>
            </value>
            <value>
                <fullName>123</fullName>
                <label>FRANCISCO MORAZAN</label>
            </value>
            <value>
                <fullName>130</fullName>
                <label>GRACIAS A DIOS</label>
            </value>
            <value>
                <fullName>133</fullName>
                <label>INTIBUCA</label>
            </value>
            <value>
                <fullName>121</fullName>
                <label>ISLAS DE LA BAHIA</label>
            </value>
            <value>
                <fullName>132</fullName>
                <label>LA PAZ</label>
            </value>
            <value>
                <fullName>131</fullName>
                <label>LEMPIRA</label>
            </value>
            <value>
                <fullName>0</fullName>
                <label>ND</label>
            </value>
            <value>
                <fullName>128</fullName>
                <label>OCOTEPEQUE</label>
            </value>
            <value>
                <fullName>125</fullName>
                <label>OLANCHO</label>
            </value>
            <value>
                <fullName>127</fullName>
                <label>SANTA BARBARA</label>
            </value>
            <value>
                <fullName>134</fullName>
                <label>VALLE</label>
            </value>
            <value>
                <fullName>124</fullName>
                <label>YORO</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>