force-app/main/default/objects/Account/fields/Departamento_Residencia2__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Residencia2__c</fullName>
    <label>Departamento Residencia</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>