force-app/main/default/objects/Account/fields/Departamento_Residencia__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Residencia__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento Residencia</label>
    <referenceTo>Departamento__c</referenceTo>
    <relationshipLabel>Cuentas</relationshipLabel>
    <relationshipName>Cuentas</relationshipName>
    <type>Lookup</type>
</CustomField>