force-app/main/default/objects/Account/fields/Departamento_Trabajo2__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Trabajo2__c</fullName>
    <label>Departamento Trabajo</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Departamentos</valueSetName>
    </valueSet>
</CustomField>