force-app/main/default/objects/Account/fields/Departamento_Trabajo__c.field-meta.xml
<CustomField>
    <fullName>Departamento_Trabajo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Departamento Trabajo</label>
    <referenceTo>Departamento__c</referenceTo>
    <relationshipLabel>Cuentas (Departamento Trabajo)</relationshipLabel>
    <relationshipName>Cuentas1</relationshipName>
    <type>Lookup</type>
</CustomField>